# PocketSentinel

./: .gitignore  README.md  pipeline.sh  run.sh  watch.sh
etl/: classifier.py  gen_keywords.py  ingest.py
etl/rules/: keywords.json
masker/: CMakeLists.txt
masker/benchmark/: gen_test_csv.py
masker/src/: main.cpp
report/: generate.py  report.html  template.html
sql/: schema.sql  seed.sql
sql/reports/: monthly_summary.sql
